--- a/.pylintrc
+++ b/.pylintrc
@@ -2,6 +2,8 @@
 
 disable =
     C0114 # Missing module's docstring
+    C0115 # Missing class' docstring
+    C0116 # Missing function's docstring
 
 # Analyse import fallback blocks. This can be used to support both Python 2 and
 # 3 compatible code, which means that the block might have code that exists
