--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ ruff = "^0.5.0"
 taskipy = "^1.13.0"
 pyproject-pre-commit = "^0.2.1"
 pre-commit = "^3.8.0"
+pydantic = "^2.9.0"
 
 [build-system]
 requires = ["poetry-core"]
